fix alignment in auth form

--- a/app/assets/stylesheets/components/auth_form.scss
+++ b/app/assets/stylesheets/components/auth_form.scss
@@ -5,18 +5,33 @@ $ever-grey: #dedede;
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: flex-end;
+
+  width: 1150px;
+  height: 720px;
+  margin: 0 auto;
 }
 
 .splash-video {
   position: absolute;
-  bottom: -30px;
   width: 1150px;
-  height: 1000px;
+  height: auto;
+  top: 5%;
+}
+
+.splash-video video {
+  width: 100%;
+  border-radius: 5px;
+  border: 1px solid lightgrey;
+}
+
+.form-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .top-line {
-  position: relative;
   width:100%;
   top:0px;
   left: 0px;
@@ -26,7 +41,6 @@ $ever-grey: #dedede;
 
 
 .form-title {
-  position: relative;
   margin: 20px auto;
   font-size: 35px;
   color: white;
@@ -35,7 +49,6 @@ $ever-grey: #dedede;
 
 .auth-logo {
   opacity: 0.7;
-  position: relative;
   padding-top: 100px;
   width: 100px;
   height: 100px;
